# RelayKit

./: .gitignore  AGENTS.md  GITHUB_METADATA.md  LANDING_COPY.md  MESSAGING.md  POSITIONING.md  README.md  SUBSET_POLICY.md  TESTING.md  pyproject.toml
config/: registry.json
config/schemas/: project-profile.schema.json  workspace-profile.schema.json
docs/: commands.md  comparison.md  concepts.md  configuration.md  index.md  relaypack-strategy.md  skills.md
examples/basic-workspace/: AGENTS.md  README.md  WALKTHROUGH.md
examples/basic-workspace/.relaykit/: workspace-profile.json
examples/basic-workspace/sample-project/: AGENTS.md
host-guides/: antigravity.md
mcp/relaykit/: __init__.py  server.py
model-notes/: gemini-3.1-flash.md  gemini-3.1-pro.md  gpt-5.4.md  sonnet-4.6.md
personas/: design-critic.md  lean-founder.md  pragmatic-builder.md  reality-checker.md  stern-architect.md
relaykit_backend/: __init__.py  git.py  taskflow.py
relaykit_runtime/: __init__.py  layout.py
relaykit_runtime/_bundle/config/: registry.json
relaykit_runtime/_bundle/host-guides/: claude-code.md  codex.md  gemini-cli.md
relaykit_runtime/_bundle/model-notes/: gpt-5.4-mini.md  opus-4.6.md
scripts/: relaykit.py
skills/relaykit/: SKILL.md
skills/relaykit-contributor/: SKILL.md
skills/relaykit-converger/: SKILL.md
skills/relaykit-critic/: SKILL.md
skills/relaykit-orchestrator/: SKILL.md
skills/relaykit-researcher/: SKILL.md
skills/relaykit-reviewer/: SKILL.md
skills/relaykit-tester/: SKILL.md
templates/: CHECKPOINT_REVIEW_TEMPLATE.md  HANDOFF_CARD_TEMPLATE.md  TASK_PACKET_TEMPLATE.md
(+15 files in other folders)
