[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "relaykit"
version = "0.3.0"
description = "Task-first multi-tool routing, launch, and continuation for agentic workflows."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
  {name = "Pavel Alba"}
]
dependencies = []

[project.urls]
Homepage = "https://github.com/palba/relaykit"
Repository = "https://github.com/palba/relaykit"

[project.scripts]
relaykit = "scripts.relaykit:main"
relaykit-mcp = "mcp.relaykit.server:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["relaykit_backend", "scripts", "mcp", "mcp.relaykit"]
