[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "relaykit"
version = "0.3.0"
description = "Harness augmentation for multi-tool, human-in-the-loop parallel execution across Codex, Claude Code, Gemini CLI, and Antigravity."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
  {name = "Pavel Alba"}
]
dependencies = [
  "anyio>=4.5",
  "mcp>=1.27,<2",
]

[project.urls]
Homepage = "https://github.com/palba/relaykit"
Repository = "https://github.com/palba/relaykit"

[project.scripts]
relaykit = "scripts.relaykit:main"
relaykit-mcp = "mcp.relaykit.server:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["relaykit_backend", "scripts", "mcp", "mcp.relaykit"]
